refactor: Refactor page sub menu controller
